--- a/Makefile.common
+++ b/Makefile.common
@@ -252,12 +252,34 @@ ifeq ($(HAVE_CHD), 1)
    
    SOURCES_C +=   $(DEPS_DIR)/crypto/md5.c \
                   $(DEPS_DIR)/crypto/sha1.c \
-                  $(wildcard $(DEPS_DIR)/flac-1.3.2/src/libFLAC/*.c) \
-                  $(wildcard $(DEPS_DIR)/lzma-16.04/C/*.c) \
+
+   # Exclude FLAC's bitwriter, stream encoding and OGG support files
+   SOURCES_C +=   $(DEPS_DIR)/flac-1.3.2/src/libFLAC/bitmath.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/bitreader.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/cpu.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/crc.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/fixed.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/fixed_intrin_sse2.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/fixed_intrin_ssse3.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/float.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/format.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/lpc.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/lpc_intrin_avx2.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/lpc_intrin_sse2.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/lpc_intrin_sse41.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/lpc_intrin_sse.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/md5.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/memory.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/metadata_iterators.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/metadata_object.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/stream_decoder.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/window.c
+   
+   SOURCES_C +=   $(wildcard $(DEPS_DIR)/lzma-16.04/C/*.c) \
                   $(wildcard $(DEPS_DIR)/libchdr/*.c)
 
-   ifeq (,$(findstring win,$(platform)))
-       SOURCES_C := $(filter-out $(DEPS_DIR)/flac-1.3.2/src/libFLAC/windows_unicode_filenames.c, $(SOURCES_C))
+   ifneq (,$(findstring win,$(platform)))
+       SOURCES_C += $(DEPS_DIR)/flac-1.3.2/src/libFLAC/windows_unicode_filenames.c
    endif
 
    SOURCES_CXX += $(CDROM_DIR)/CDAccess_CHD.cpp
