--- a/Makefile.common
+++ b/Makefile.common
@@ -264,7 +264,7 @@ ifeq ($(HAVE_CHD), 1)
    endif
    
    SOURCES_C +=   $(DEPS_DIR)/crypto/md5.c \
-                  $(DEPS_DIR)/crypto/sha1.c
+                  $(DEPS_DIR)/crypto/sha1.c \
 
    # Exclude FLAC's bitwriter, stream encoding and OGG support files
    SOURCES_C +=   $(DEPS_DIR)/flac-1.3.2/src/libFLAC/bitmath.c \
@@ -288,21 +288,8 @@ ifeq ($(HAVE_CHD), 1)
                   $(DEPS_DIR)/flac-1.3.2/src/libFLAC/stream_decoder.c \
                   $(DEPS_DIR)/flac-1.3.2/src/libFLAC/window.c
    
-   SOURCES_C +=   $(DEPS_DIR)/lzma-16.04/C/Alloc.c \
-                  $(DEPS_DIR)/lzma-16.04/C/Bra86.c \
-                  $(DEPS_DIR)/lzma-16.04/C/Bra.c \
-                  $(DEPS_DIR)/lzma-16.04/C/BraIA64.c \
-                  $(DEPS_DIR)/lzma-16.04/C/CpuArch.c \
-                  $(DEPS_DIR)/lzma-16.04/C/Delta.c \
-                  $(DEPS_DIR)/lzma-16.04/C/LzFind.c \
-                  $(DEPS_DIR)/lzma-16.04/C/Lzma86Dec.c \
-                  $(DEPS_DIR)/lzma-16.04/C/Lzma86Enc.c \
-                  $(DEPS_DIR)/lzma-16.04/C/LzmaDec.c \
-                  $(DEPS_DIR)/lzma-16.04/C/LzmaEnc.c \
-                  $(DEPS_DIR)/lzma-16.04/C/LzmaLib.c \
-                  $(DEPS_DIR)/lzma-16.04/C/Sort.c
-                  
-   SOURCES_C +=   $(wildcard $(DEPS_DIR)/libchdr/*.c)
+   SOURCES_C +=   $(wildcard $(DEPS_DIR)/lzma-16.04/C/*.c) \
+                  $(wildcard $(DEPS_DIR)/libchdr/*.c)
 
    ifneq (,$(findstring win,$(platform)))
        SOURCES_C += $(DEPS_DIR)/flac-1.3.2/src/libFLAC/windows_unicode_filenames.c
