--- a/Makefile.common
+++ b/Makefile.common
@@ -6,6 +6,7 @@ LIBRETRO_DIR := $(CORE_DIR)/libretro-common
 LIBKIRK_DIR  := $(DEPS_DIR)/libkirk
 MEDNAFEN_DIR := $(CORE_DIR)/mednafen
 CORE_EMU_DIR := $(MEDNAFEN_DIR)/psx
+RSXGL_DIR    := $(CORE_DIR)/rustation-libretro/src
 CDROM_DIR    := $(MEDNAFEN_DIR)/cdrom
 
 ifeq ($(HAVE_OPENGL), 1)
@@ -43,7 +44,20 @@ ifneq (,$(findstring msvc,$(platform)))
 INCFLAGS += -I$(CORE_DIR)/msvc
 endif
 
-SOURCES_C +=   $(wildcard $(DEPS_DIR)/zlib/*.c) \
+SOURCES_C +=   $(DEPS_DIR)/zlib/adler32.c \
+               $(DEPS_DIR)/zlib/compress.c \
+               $(DEPS_DIR)/zlib/crc32.c \
+               $(DEPS_DIR)/zlib/deflate.c \
+               $(DEPS_DIR)/zlib/gzclose.c \
+               $(DEPS_DIR)/zlib/gzlib.c \
+               $(DEPS_DIR)/zlib/gzread.c \
+               $(DEPS_DIR)/zlib/gzwrite.c \
+               $(DEPS_DIR)/zlib/inffast.c \
+               $(DEPS_DIR)/zlib/inflate.c \
+               $(DEPS_DIR)/zlib/inftrees.c \
+               $(DEPS_DIR)/zlib/trees.c \
+               $(DEPS_DIR)/zlib/uncompr.c \
+               $(DEPS_DIR)/zlib/zutil.c \
                $(DEPS_DIR)/ugui/ugui.c \
                $(CORE_DIR)/ugui_tools.c
 
@@ -106,6 +120,28 @@ ifeq ($(NEED_CD), 1)
    FLAGS += -DNEED_CD
 endif
 
+ifeq ($(HAVE_CHD), 1)
+   FLAGS += -DHAVE_CHD \
+            -D_7ZIP_ST \
+            -DPACKAGE_VERSION=\"1.3.2\" \
+            -DFLAC_API_EXPORTS \
+            -DFLAC__HAS_OGG=0 \
+            -DHAVE_LROUND \
+            -DHAVE_STDINT_H \
+            -DHAVE_STDLIB_H \
+            -DHAVE_SYS_PARAM_H
+
+   INCFLAGS += -I$(DEPS_DIR)/crypto \
+               -I$(DEPS_DIR)/flac-1.3.2/include \
+               -I$(DEPS_DIR)/flac-1.3.2/src/libFLAC/include \
+               -I$(DEPS_DIR)/lzma-16.04/C \
+               -I$(DEPS_DIR)/libchdr
+
+   ifeq ($(platform), win)
+       FLAGS += -DHAVE_FSEEKO
+   endif
+endif
+
 ifeq ($(NEED_TREMOR), 1)
    FLAGS += -DNEED_TREMOR
 endif
@@ -143,19 +179,19 @@ ifneq ($(HAVE_GRIFFIN), 1)
    endif
 
    SOURCES_CXX += $(CDROM_DIR)/CDAccess.cpp \
-                  $(CDROM_DIR)/CDAccess_Image.cpp \
-                  $(CDROM_DIR)/CDAccess_CCD.cpp \
-                  $(CDROM_DIR)/CDAccess_PBP.cpp \
-                  $(CDROM_DIR)/audioreader.cpp \
-                  $(CDROM_DIR)/misc.cpp \
-                  $(CDROM_DIR)/cdromif.cpp
+		  $(CDROM_DIR)/CDAccess_Image.cpp \
+		  $(CDROM_DIR)/CDAccess_CCD.cpp \
+		  $(CDROM_DIR)/CDAccess_PBP.cpp \
+		  $(CDROM_DIR)/audioreader.cpp \
+		  $(CDROM_DIR)/misc.cpp \
+		  $(CDROM_DIR)/cdromif.cpp
 
    SOURCES_C +=   $(CDROM_DIR)/CDUtility.c \
-                  $(CDROM_DIR)/galois.c \
-                  $(CDROM_DIR)/l-ec.c \
-                  $(CDROM_DIR)/lec.c \
-                  $(CDROM_DIR)/recover-raw.c \
-                  $(CDROM_DIR)/edc_crc32.c
+		  $(CDROM_DIR)/galois.c \
+		  $(CDROM_DIR)/l-ec.c \
+		  $(CDROM_DIR)/lec.c \
+		  $(CDROM_DIR)/recover-raw.c \
+		  $(CDROM_DIR)/edc_crc32.c
 
    SOURCES_CXX += $(MEDNAFEN_DIR)/error.cpp \
                   $(MEDNAFEN_DIR)/settings.cpp \
@@ -205,7 +241,7 @@ ifneq ($(HAVE_GRIFFIN), 1)
       ifneq ($(VULKAN_DEBUG),)
          FLAGS += -DVULKAN_DEBUG
       endif
-   endif ## ifeq ($(HAVE_VULKAN), 1)
+   endif
 
    ifneq ($(STATIC_LINKING), 1)
       SOURCES_C +=   $(LIBRETRO_DIR)/streams/file_stream.c \
@@ -235,43 +271,70 @@ ifneq ($(HAVE_GRIFFIN), 1)
       ifeq ($(NEED_THREADING), 1)
          SOURCES_C += $(LIBRETRO_DIR)/rthreads/rthreads.c
       endif
-   
+
    endif
 endif ## ifneq($(HAVE_GRIFFIN, 1))
 
-SOURCES_C +=   $(wildcard $(LIBKIRK_DIR)/*.c)
+SOURCES_C +=   $(LIBKIRK_DIR)/aes.c \
+               $(LIBKIRK_DIR)/amctrl.c \
+               $(LIBKIRK_DIR)/bn.c \
+               $(LIBKIRK_DIR)/des.c \
+               $(LIBKIRK_DIR)/ec.c \
+               $(LIBKIRK_DIR)/kirk_engine.c \
+               $(LIBKIRK_DIR)/sha1.c
 
-SOURCES_C +=   $(wildcard $(CORE_DIR)/pgxp/*.c)
+SOURCES_C +=   $(CORE_DIR)/pgxp/pgxp_cpu.c \
+               $(CORE_DIR)/pgxp/pgxp_debug.c \
+               $(CORE_DIR)/pgxp/pgxp_gpu.c \
+               $(CORE_DIR)/pgxp/pgxp_gte.c \
+               $(CORE_DIR)/pgxp/pgxp_main.c \
+               $(CORE_DIR)/pgxp/pgxp_mem.c \
+               $(CORE_DIR)/pgxp/pgxp_value.c
 
 ifeq ($(HAVE_CHD), 1)
-   FLAGS += -DHAVE_CHD \
-            -D_7ZIP_ST \
-            -DPACKAGE_VERSION=\"1.3.2\" \
-            -DFLAC_API_EXPORTS \
-            -DFLAC__HAS_OGG=0 \
-            -DHAVE_LROUND \
-            -DHAVE_STDINT_H \
-            -DHAVE_STDLIB_H \
-            -DHAVE_SYS_PARAM_H
-
-   INCFLAGS += -I$(DEPS_DIR)/crypto \
-               -I$(DEPS_DIR)/flac-1.3.2/include \
-               -I$(DEPS_DIR)/flac-1.3.2/src/libFLAC/include \
-               -I$(DEPS_DIR)/lzma-16.04/C \
-               -I$(DEPS_DIR)/libchdr
-
-   ifeq ($(platform), win)
-       FLAGS += -DHAVE_FSEEKO
-   endif
-   
    SOURCES_C +=   $(DEPS_DIR)/crypto/md5.c \
                   $(DEPS_DIR)/crypto/sha1.c \
-                  $(wildcard $(DEPS_DIR)/flac-1.3.2/src/libFLAC/*.c) \
-                  $(wildcard $(DEPS_DIR)/lzma-16.04/C/*.c) \
-                  $(wildcard $(DEPS_DIR)/libchdr/*.c)
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/bitmath.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/bitreader.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/cpu.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/crc.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/fixed.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/fixed_intrin_sse2.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/fixed_intrin_ssse3.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/float.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/format.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/lpc.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/lpc_intrin_avx2.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/lpc_intrin_sse2.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/lpc_intrin_sse41.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/lpc_intrin_sse.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/md5.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/memory.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/metadata_iterators.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/metadata_object.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/stream_decoder.c \
+                  $(DEPS_DIR)/flac-1.3.2/src/libFLAC/window.c \
+                  $(DEPS_DIR)/lzma-16.04/C/Alloc.c \
+                  $(DEPS_DIR)/lzma-16.04/C/Bra86.c \
+                  $(DEPS_DIR)/lzma-16.04/C/Bra.c \
+                  $(DEPS_DIR)/lzma-16.04/C/BraIA64.c \
+                  $(DEPS_DIR)/lzma-16.04/C/CpuArch.c \
+                  $(DEPS_DIR)/lzma-16.04/C/Delta.c \
+                  $(DEPS_DIR)/lzma-16.04/C/LzFind.c \
+                  $(DEPS_DIR)/lzma-16.04/C/Lzma86Dec.c \
+                  $(DEPS_DIR)/lzma-16.04/C/Lzma86Enc.c \
+                  $(DEPS_DIR)/lzma-16.04/C/LzmaDec.c \
+                  $(DEPS_DIR)/lzma-16.04/C/LzmaEnc.c \
+                  $(DEPS_DIR)/lzma-16.04/C/LzmaLib.c \
+                  $(DEPS_DIR)/lzma-16.04/C/Sort.c \
+                  $(DEPS_DIR)/libchdr/bitstream.c \
+                  $(DEPS_DIR)/libchdr/cdrom.c \
+                  $(DEPS_DIR)/libchdr/chd.c \
+                  $(DEPS_DIR)/libchdr/flac.c \
+                  $(DEPS_DIR)/libchdr/huffman.c 
 
-   ifeq (,$(findstring win,$(platform)))
-       SOURCES_C := $(filter-out $(DEPS_DIR)/flac-1.3.2/src/libFLAC/windows_unicode_filenames.c, $(SOURCES_C))
+   ifneq (,$(findstring win,$(platform)))
+       SOURCES_C += $(DEPS_DIR)/flac-1.3.2/src/libFLAC/windows_unicode_filenames.c
    endif
 
    SOURCES_CXX += $(CDROM_DIR)/CDAccess_CHD.cpp
