--- a/Makefile.common
+++ b/Makefile.common
@@ -252,6 +252,7 @@ ifneq ($(HAVE_GRIFFIN), 1)
                      $(LIBRETRO_DIR)/compat/compat_strcasestr.c \
                      $(LIBRETRO_DIR)/compat/compat_posix_string.c \
                      $(LIBRETRO_DIR)/encodings/encoding_utf.c \
+                     $(LIBRETRO_DIR)/memmap/memalign.c \
                      $(LIBRETRO_DIR)/hash/rhash.c
 
       ifeq ($(HAVE_CDROM), 1)
