Allow easy disabling of lightrec THREADED_RECOMPILER

--- a/Makefile.common
+++ b/Makefile.common
@@ -149,10 +149,14 @@ endif
 ifeq ($(HAVE_LIGHTREC), 1)
    FLAGS += -DHAVE_LIGHTREC
 
-   ifeq ($(DEBUG), 0)
-       FLAGS += -DENABLE_THREADED_COMPILER=1
-   else
+   ifeq ($(THREADED_RECOMPILER), 0)
        FLAGS += -DENABLE_THREADED_COMPILER=0
+   else
+      ifeq ($(DEBUG), 0)
+          FLAGS += -DENABLE_THREADED_COMPILER=1
+      else
+          FLAGS += -DENABLE_THREADED_COMPILER=0
+      endif
    endif
 
    ifneq (,$(findstring win,$(platform)))
@@ -378,8 +382,10 @@ ifeq ($(HAVE_LIGHTREC), 1)
                   $(DEPS_DIR)/lightrec/optimizer.c \
                   $(DEPS_DIR)/lightrec/regcache.c
 
-   ifeq ($(DEBUG), 0)
-       SOURCES_C +=   $(DEPS_DIR)/lightrec/recompiler.c
+   ifeq ($(THREADED_RECOMPILER), 1)
+      ifeq ($(DEBUG), 0)
+          SOURCES_C +=   $(DEPS_DIR)/lightrec/recompiler.c
+      endif
    endif
 
    ifneq (,$(findstring win,$(platform)))
